syntax = "proto3";

option java_package = "org.shareable";
option java_outer_classname = "ShareableProto";

message RequestKeys {
  string key = 1;
  repeated string keys = 2;
}

message StreamableMapUpdate {
  string key = 1;
  string value = 2;
}

message StreamableMapObject {
  repeated StreamableMapUpdate  streamableMap = 1;
}

service ShareableMapService{
  rpc streamShareableMap(stream StreamableMapUpdate) returns (stream StreamableMapUpdate) {}
  rpc getShareableMap(RequestKeys) returns (StreamableMapObject) {};
}
